src/test/ui/issues/issue-27433.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-27433.rs:3:23
   |
LL |     const FOO : u32 = foo;
   |                       ^^^ non-constant value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0435`.
