src/test/ui/issues/issue-27433.rs
fn main() {
    let foo = 42u32;
    const FOO : u32 = foo;
                   //~^ ERROR can't capture dynamic environment
}
